--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 PORT=3000
+JIRA_BASE_URL=https://your-domain.atlassian.net
+JIRA_EMAIL=your-email@example.com
+JIRA_API_TOKEN=xxxxxxxxxxxx
+JIRA_PROJECT_KEY=PROJ
+
+SLACK_BOT_TOKEN=xoxb-xxxx
