feat: adicionando integração com o github.

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,8 @@ JIRA_EMAIL=your-email@example.com
 JIRA_API_TOKEN=xxxxxxxxxxxx
 JIRA_PROJECT_KEY=PROJ
 
+GITHUB_TOKEN=ghp_xxxxxxxxxxxxx
+GITHUB_OWNER=your-username
+GITHUB_REPO=your-repo
+
 SLACK_BOT_TOKEN=xoxb-xxxx
