feat: add notion integration

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,7 @@ GITHUB_TOKEN=ghp_xxxxxxxxxxxxx
 GITHUB_OWNER=your-username
 GITHUB_REPO=your-repo
 
+NOTION_API_KEY=secret_xxxxxxxxxxxxx
+NOTION_PAGE_ID=xxxxxxxxxxxxxxxxxxxx
+
 SLACK_BOT_TOKEN=xoxb-xxxx
